--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,6 +11,7 @@ actix-cors = "0.5"
 actix-web = "3"
 chrono = { version = "0.4", features = ["serde"]}
 env_logger = "0.9"
+log = "0.4"
 r2d2 = "0.8"
 r2d2_sqlite = "0.19"
 rusqlite = { version = "0.26", features = ["chrono", "uuid"]}
