--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -9,12 +9,12 @@ edition = "2018"
 [dependencies]
 actix-cors = "0.5"
 actix-web = "3"
-chrono = { version = "0.4", features = ["serde"]}
+anyhow = "1"
+chrono = { version = "0.4", features = ["serde"] }
+dotenv = "^0"
 env_logger = "0.9"
 log = "0.4"
-r2d2 = "0.8"
-r2d2_sqlite = "0.19"
-rusqlite = { version = "0.26", features = ["chrono", "uuid"]}
 serde = "1"
 serde_json = "1"
+sqlx = { version = "0.4.2", features = ["chrono", "runtime-actix-native-tls", "sqlite", "uuid"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
