--- a/ui/android/app/src/main/AndroidManifest.xml
+++ b/ui/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mobile">
-   <uses-permission android:name="android.permission.INTERNET" />
+    package="com.example.ui">
    <application
-        android:label="mobile"
+        android:label="ui"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
