--- a/ui/web/manifest.json
+++ b/ui/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "mobile",
-    "short_name": "mobile",
+    "name": "ui",
+    "short_name": "ui",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
