--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   beamer: ^1.0.0
   json_annotation: ^4.4.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
