--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   beamer: ^1.0.0
   json_annotation: ^4.4.0
   provider: ^6.0.1
+  charts_flutter: ^0.12.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
