--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   provider: ^6.0.1
   charts_flutter: ^0.12.0
   intl: ^0.17.0
+  flutter_neumorphic: ^3.2.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
