--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   beamer: ^1.0.0
   json_annotation: ^4.4.0
   provider: ^6.0.1
-  charts_flutter: ^0.12.0
   intl: ^0.17.0
   flutter_neumorphic: ^3.2.0
   fluttertoast: ^8.0.8
+  fl_chart: ^0.40.6
 
 dev_dependencies:
   flutter_test:
