--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_neumorphic: ^3.2.0
   fluttertoast: ^8.0.8
   fl_chart: ^0.40.6
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
