--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,8 @@
-FROM rust:1.57-alpine3.14
-
+FROM rust:1.57-buster as build
 WORKDIR /app
 COPY . .
+RUN cargo build
 
+FROM debian:buster
+WORKDIR /app
+COPY --from=build /app/target/debug .
