--- a/infra/ingress.yaml
+++ b/infra/ingress.yaml
@@ -2,9 +2,21 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: api-ingress
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   defaultBackend:
     service:
       name: api-service
       port:
         number: 8080
+  rules:
+    - http:
+        paths:
+          - pathType: Prefix
+            path: "/"
+            backend:
+              service:
+                name: api-service
+                port:
+                  number: 8080
