Speed up api build by caching docker layers with cargo-chef

--- a/infra/api/deployment.yaml
+++ b/infra/api/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: api
-          command: ["/app/api"]
+          command: ["/usr/local/bin/api"]
           image: api
           resources:
             requests:
