The ingress wasn't broken, the service just wasn't binding to localhost properly. Ugh.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -16,3 +16,5 @@ FROM debian:buster-slim AS runtime
 WORKDIR /app
 COPY --from=builder /app/target/debug/api /usr/local/bin
 ENTRYPOINT [ "/usr/local/bin/api" ]
+
+EXPOSE 8080
