--- a/infra/api/deployment.yaml
+++ b/infra/api/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: api-deployment
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: api
@@ -13,13 +13,15 @@ spec:
         app: api
     spec:
       containers:
-        - name: api
-          command: ["/usr/local/bin/api"]
-          image: api
-          resources:
-            requests:
-              memory: "2Gi"
-              cpu: "1"
-            limits:
-              memory: "4Gi"
-              cpu: "2"
+      - name: api
+        command: ["/usr/local/bin/api"]
+        image: api
+        ports:
+        - containerPort: 8080
+        resources:
+          requests:
+            memory: "2Gi"
+            cpu: "1"
+          limits:
+            memory: "4Gi"
+            cpu: "2"
