--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -11,9 +11,12 @@ actix-cors = "0.5"
 actix-web = "3"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
+deadpool = "0.9.2"
+deadpool-postgres = "0.10.1"
 dotenv = "^0"
 env_logger = "0.9"
 log = "0.4"
 serde = "1"
 serde_json = "1"
+tokio-postgres = "0.7.5"
 uuid = { version = "0.8", features = ["serde", "v4"] }
