--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 actix-cors = "0.5"
-actix-web = "3"
+actix-web = "4.0.0-beta.18"
 anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 deadpool = "0.9.2"
