Figured out the right host/port combo to connect to cockroach cluster; connection is checked in status endpoint

--- a/infra/skaffold.yaml
+++ b/infra/skaffold.yaml
@@ -13,7 +13,6 @@ build:
 deploy:
   kubectl:
     manifests:
-      - infra/db/cockroach-definition.yaml
       - infra/api/*
-      - infra/db/*
+      # - infra/db/*
       - infra/ingress.yaml
