--- a/infra/api/deployment.yaml
+++ b/infra/api/deployment.yaml
@@ -13,15 +13,21 @@ spec:
         app: api
     spec:
       containers:
-      - name: api
-        command: ["/usr/local/bin/api"]
-        image: api
-        ports:
-        - containerPort: 8080
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "1"
-          limits:
-            memory: "4Gi"
-            cpu: "2"
+        - name: api
+          command: ["/usr/local/bin/api"]
+          image: api
+          ports:
+            - containerPort: 8080
+          resources:
+            requests:
+              memory: "2Gi"
+              cpu: "1"
+            limits:
+              memory: "4Gi"
+              cpu: "2"
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 1
+            periodSeconds: 1
