Stood up dropshot server in k8s, with liveness and readiness probes, plus DB connection to cockroachdb with SQLx

--- a/infra/skaffold.yaml
+++ b/infra/skaffold.yaml
@@ -8,9 +8,9 @@ build:
     useBuildkit: true
   artifacts:
     - image: api
-      context: api
+      context: api2/server
     - image: migrator
-      context: migrator
+      context: api2/migrator
 deploy:
   kubectl:
     manifests:
