--- a/infra/api/deployment.yaml
+++ b/infra/api/deployment.yaml
@@ -26,7 +26,13 @@ spec:
               cpu: "2"
           livenessProbe:
             httpGet:
-              path: /health
+              path: /live
               port: 8080
             initialDelaySeconds: 1
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /ready
+              port: 8080
+            initialDelaySeconds: 10
             periodSeconds: 10
