--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,22 +1,3 @@
-[package]
-name = "api"
-version = "0.1.0"
-authors = ["Taylor Ninesling <taylor.ninesling@protonmail.com>"]
-edition = "2018"
+[workspace]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-actix-cors = "0.5"
-actix-web = "4.0.0-beta.18"
-anyhow = "1"
-chrono = { version = "0.4", features = ["serde"] }
-deadpool = "0.9.2"
-deadpool-postgres = "0.10.1"
-dotenv = "^0"
-env_logger = "0.9"
-log = "0.4"
-serde = "1"
-serde_json = "1"
-tokio-postgres = "0.7.5"
-uuid = { version = "0.8", features = ["serde", "v4"] }
+members = [ "migrator", "seeder", "server" ]
