--- a/api/server/Cargo.toml
+++ b/api/server/Cargo.toml
@@ -6,10 +6,15 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-dropshot = "0.5"
+dropshot = "0.6.0"
 http = "0.2.0"
+hyper-staticfile = "0.8"
 serde_json = "1.0.74"
 uuid = "0.8.2"
+
+[dependencies.hyper]
+version = "0.14"
+features = [ "full" ]
 
 [dependencies.schemars]
 version = "0.8.8"
