Small cleanup of unnecessary TODOs

--- a/infra/db/cockroach-cluster.yaml
+++ b/infra/db/cockroach-cluster.yaml
@@ -1112,8 +1112,7 @@ spec:
                                 type: string
                               name:
                                 description:
-                                  "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                  TODO: Add other useful fields. apiVersion, kind, uid?"
+                                  "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
                                 type: string
                               optional:
                                 description:
@@ -1180,8 +1179,7 @@ spec:
                                 type: string
                               name:
                                 description:
-                                  "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
-                                  TODO: Add other useful fields. apiVersion, kind, uid?"
+                                  "Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names"
                                 type: string
                               optional:
                                 description:
