Meals and recipes tables with join tables for ingredient inclusion, plus aggregation query to return daily macro trends

--- a/infra/seeder/job.yaml
+++ b/infra/seeder/job.yaml
@@ -7,5 +7,6 @@ spec:
     spec:
       containers:
         - name: seeder
-          image: seeder
+          image: seeder:latest
+          imagePullPolicy: Never
       restartPolicy: Never
