--- a/api/server/Cargo.toml
+++ b/api/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.19"
 dropshot = "0.6.0"
 http = "0.2.0"
 hyper-staticfile = "0.8"
@@ -18,7 +19,7 @@ features = [ "full" ]
 
 [dependencies.schemars]
 version = "0.8.8"
-features = [ "uuid" ]
+features = [ "chrono", "uuid" ]
 
 [dependencies.serde]
 version = "1.0.133"
