Turn seeder back on

--- a/infra/migrator/job.yaml
+++ b/infra/migrator/job.yaml
@@ -9,4 +9,4 @@ spec:
       containers:
         - name: migrator
           image: migrator
-      restartPolicy: Never
+      restartPolicy: OnFailure
