--- a/infra/seeder/job.yaml
+++ b/infra/seeder/job.yaml
@@ -3,10 +3,10 @@ kind: Job
 metadata:
   name: seeder
 spec:
+  ttlSecondsAfterFinished: 60
   template:
     spec:
       containers:
         - name: seeder
-          image: seeder:latest
-          imagePullPolicy: Never
-      restartPolicy: Never
+          image: seeder
+      restartPolicy: OnFailure
