Basic implementation of create + read operations on ingredients

--- a/api/server/Cargo.toml
+++ b/api/server/Cargo.toml
@@ -12,6 +12,8 @@ dropshot = "0.6.0"
 http = "0.2.0"
 hyper-staticfile = "0.8"
 serde_json = "1.0.74"
+slog = "2.7.0"
+typed-builder = "0.9.1"
 uuid = "0.8.2"
 
 [dependencies.hyper]
