--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   fl_chart: ^0.40.6
   charts_flutter: ^0.12.0
 
+  openapi:
+    path: ../client/dart
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
