Diet screen now pulls and displays ingredients from server using the generated api client

--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   charts_flutter: ^0.12.0
 
   openapi:
-    path: ../client/dart
+    path: ../api/client/dart
 
 dev_dependencies:
   flutter_test:
