--- a/api/server/Cargo.toml
+++ b/api/server/Cargo.toml
@@ -16,6 +16,11 @@ slog = "2.7.0"
 typed-builder = "0.9.1"
 uuid = "0.8.2"
 
+[dependencies.good_lp]
+version = "1.3.1"
+default-features = false
+features = [ "minilp" ]
+
 [dependencies.hyper]
 version = "0.14"
 features = [ "full" ]
