--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -27,25 +27,23 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  flutter:
-    sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  charts_flutter: ^0.12.0
   cupertino_icons: ^1.0.2
   http: ^0.13.4
-  beamer: ^1.0.0
-  json_annotation: ^4.4.0
-  provider: ^6.0.1
   intl: ^0.17.0
+  json_annotation: ^4.4.0
+  flutter:
+    sdk: flutter
   flutter_neumorphic: ^3.2.0
   fluttertoast: ^8.0.8
   fl_chart: ^0.40.6
-  charts_flutter: ^0.12.0
-
   openapi:
     path: ../api/client/dart
+  path: ^1.8.0
+  provider: ^6.0.1
+  sqflite: ^2.0.0
+  uuid: ^3.0.0
+
 
 dev_dependencies:
   flutter_test:
