--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM rust:1.57-buster as base
+FROM rust:1.65-buster as base
 RUN cargo install cargo-chef
 WORKDIR /app
 
@@ -10,10 +10,11 @@ FROM base AS builder
 COPY --from=planner /app/recipe.json recipe.json
 RUN cargo chef cook --recipe-path recipe.json
 COPY . .
-RUN cargo build --bin seeder
+RUN cargo build --bin server
 
 FROM debian:buster-slim AS runtime
-COPY --from=builder /app/target/debug/seeder /usr/local/bin
-ENTRYPOINT [ "/usr/local/bin/seeder" ]
+WORKDIR /app
+COPY --from=builder /app/target/debug/server /usr/local/bin
+CMD [ "/usr/local/bin/server" ]
 
 EXPOSE 8080
